Fixed text overflow for long words on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -430,6 +430,7 @@ a {
 
     #tr-title {
         text-align: left;
+        overflow-x: scroll;
     }
 
     #lang-selector-container {
